[package]
name = "mori_parallel"
version = "0.1.0"
authors = ["rcarson3 <rac428@cornell.edu>"]
license = "MIT/Apache-2.0"
readme = "README-crates.io.md"

repository = "https://github.com/rcarson3/mori/mori-parallel/"
documentation = ""

description = "A parallel orientation library built around commonly used orientation representations used in crystallography and engineering applications. It contains conversion, rotation, and data analysis operations for various orientation spaces."

keywords = ["array", "orientation", "3D rotation", "crystallography", "parallel"]
categories = ["data-structures", "science"]

[dependencies]
ndarray = "0.11.1"
ndarray-parallel = "0.8"
[dev-dependencies]
csv = "1" 
