[package]
name = "mori_parallel"
version = "0.1.3"
authors = ["rcarson3 <rac428@cornell.edu>"]
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/rcarson3/mori/tree/master/mori-parallel/"
documentation = "https://docs.rs/mori_parallel/"

description = "A parallel orientation library built around commonly used orientation representations used in crystallography and engineering applications. It contains conversion, rotation, and data analysis operations for various orientation spaces."

keywords = ["array", "orientation", "3D_rotation", "crystallography", "parallel"]
categories = ["data-structures", "science"]

[dependencies]
ndarray = "0.11.1"
ndarray-parallel = "0.8"
[dev-dependencies]
csv = "1" 
