[package]
name = "mori"
version = "0.2.0"
authors = ["rcarson3 <rac428@cornell.edu>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

repository = "https://github.com/rcarson3/mori/tree/master/mori/"
documentation = "https://docs.rs/mori/"

description = "An orientation library built around commonly used orientation representations used in crystallography and engineering applications. It contains conversion, rotation, and data analysis operations for various orientation spaces."

keywords = ["array", "orientation", "3D_rotation", "crystallography", "parallel"]
categories = ["data-structures", "science"]

[dependencies]
ndarray = {version = "0.13.0", features=["approx"]}
[features] 
parallel = ["ndarray/rayon"]
[dev-dependencies]
csv = "1.1.3"
approx = "0.3.2"
